Agregando bootstrap y herando la de una plantilla base para todas las vistas

--- a/tweets/templates/tweets/list_view.html
+++ b/tweets/templates/tweets/list_view.html
@@ -1,3 +1,5 @@
+{%extends 'base.html'%}
+{% block content%}
 {% include './search_form.html'%}
 {% for object in objects%}
     <p>
@@ -8,3 +10,4 @@
 {% empty %}
     Tweets not found
 {% endfor%}
+{% endblock %}
