Se agrego el formulario en la pantall principal para poder crear un tweet

--- a/tweets/templates/tweets/create_view.html
+++ b/tweets/templates/tweets/create_view.html
@@ -1,9 +1,5 @@
 {% extends "base.html" %}
 {% block content%}
-<form action="" method="POST">
-    {%csrf_token%}
-    {{form.as_p}}
-    <input type="submit" value="tweet">
-</form>
+    {% include './form.html' with form=form btn_title="Tweet"%}
 {% endblock %}
 
