--- a/tweets/templates/tweets/list_view.html
+++ b/tweets/templates/tweets/list_view.html
@@ -1,19 +1,26 @@
 {%extends 'base.html'%}
 {% block content%}
-{% include './search_form.html'%}
-{% for object in objects%}
-<div class="media">
-    <div class="media-left">
-        {% if object.image %}
-        <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
-        {% endif %}
-    </div>
-    <div class="media-body mb-4">
-        {{object.content}}<br>
-        via {{object.user}} | {{object.timestamp}} ago | <a href="{%url 'tweet_update' object.pk %}">View</a>
+<div class="row justify-content-md-center">
+    <div class="col-2">{{user}}</div>
+    <div class="col-10">
+        {% if not request.GET.q %}
+        {% include "./form.html" with form=form action_url=url_form btn_title="Tweet"%}
+        {%endif%}
+        {% for object in objects%}
+        <div class="media">
+            <div class="media-left">
+                {% if object.image %}
+                <img class="align-self-start mr-3" src="..." alt="Generic placeholder image">
+                {% endif %}
+            </div>
+            <div class="media-body mb-4">
+                {{object.content}}<br>
+                via {{object.user}} | {{object.timestamp}} ago | <a href="{%url 'tweet_update' object.pk %}">View</a>
+            </div>
+        </div>
+        {% empty %}
+        Tweets not found
+        {% endfor %}
     </div>
 </div>
-{% empty %}
-    Tweets not found
-{% endfor %}
 {% endblock %}
