--- a/tweets/templates/tweets/search_form.html
+++ b/tweets/templates/tweets/search_form.html
@@ -1,14 +1,4 @@
-<form class="form-inline mt-2" action="{% url 'tweet_list'%}" method="GET">
-    <div class="row">
-        <div class="col">
-            <div class="form-group mb-2">
-                <input class="form-control" type="text" name="q" placeholder="Search" value="{{request.GET.q}}">
-            </div>
-        </div>
-        <div class="col">
-            <button class="btn btn-primary" type="submit">Search</button>
-        </div>
-    </div>
-    
-    
+<form class="form-inline my-2 my-lg-0" action="{% url 'tweet_list'%}" method="GET">
+    <input class="form-control mr-sm-2" type="text" name="q" placeholder="Search" value="{{request.GET.q}}">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>    
 </form>
