--- a/tweets/templates/tweets/update_view.html
+++ b/tweets/templates/tweets/update_view.html
@@ -1,8 +1,4 @@
 {% extends "base.html" %}
 {% block content%}
-<form action="" method="POST">
-    {%csrf_token%}
-    {{form.as_p}}
-    <input type="submit" value="tweet">
-</form>
+{% include './form.html' with btn_title="Update"%}
 {% endblock %}
